<resources>
    <string name="app_name">Code Challenge Intent</string>
    <string name="text_one">Text 1</string>
    <string name="article_title">Beatles Anthology Vol. 1</string>
    <string name="article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London - protected by an unmarked, triple-locked, police-alarmed door - are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
    \n\n
    This volume starts with the first new Beatle song, "Free as a Bird" (based on a John Lennon demo, found only on <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
    \n\n
    <b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
    \n\n
    <b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
    \n\n
    <b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys!
    \n\n
    <b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
    \n\n
    <b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
    \n\n
    <b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
    \n\n
    <b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
    </string>
    <string name="add_comment">ADD COMMENT</string>
    <string name="text_two">Text 2</string>
    <string name="article_title_two">Larangan Mempersulit Orang Lain</string>
    <string name="article_subtitle_two"><b>Azab Mempersulit Orang</b></string>
    <string name="article_text_two">Dari Abi Shirmah radhiallahu ‘anhu  beliau berkata, Rasulullah ﷺ  bersabda, “Barang siapa yang memberi kemudaratan kepada seorang muslim, maka Allah akan memberi kemudaratan kepadanya, barang siapa yang merepotkan (menyusahkan) seorang muslim maka Allah akan menyusahkan dia.” ([1])

Makna Hadits
        \n\n
<b><i>Tidak diragukan lagi bahwasanya makna dari hadits ini adalah benar, terdapat hadits-hadits lain yang menguatkan makna dari hadits ini. Seperti dalam sebuah hadits yang sahih, Nabi ﷺ pernah berdoa,
</i></b>
اَللَّهُمَّ مَنْ وَلِيَ مِنْ أَمْرِ أُمَّتِي شَيْئًا فَشَقَّ عَلَيْهِ فَاشْقُقْ عَلَيْه<b><i>
        </i></b>ِ
“Ya Allah, barang siapa yang mengurusi urusan umatku kemudian dia merepotkan umatku maka susahkanlah dia.” ([2])
\n\n
Hadits ini menunjukkan dua kaidah penting dalam syariat Islam, yaitu:

Balasan sesuai dengan jenis perbuatan baik berupa kebaikan maupun keburukan
        <b><i> (اَلْجَزَاءُ مُمَاثِلٌ لِلْعَمَلِ مِنْ جِنْسِهِ فِي الْخَيْرِ وَالشَّرِّ )</i></b>
        \n\n
Inilah hikmah yang ditetapkan oleh Allah ﷻ, Allah memberikan balasan sesuai dengan apa yang dilakukan oleh seorang hamba. Barang siapa melakukan amalan yang dicintai oleh Allah, maka Allah akan mencintainya pula. Barang siapa memudahkan urusan seorang muslim maka Allah akan mudahkan urusannya di dunia maupun di akhirat. Barang siapa yang menghilangkan penderitaan seorang muslim maka Allah akan menghilangkan penderitaannya di dunia dan di akhirat. Barang siapa membantu untuk memenuhi kebutuhan saudaranya maka Allah akan membantu untuk memenuhi kebutuhannya.

Sebaliknya dalam keburukan pun demikian. Barang siapa melakukan amalan yang dibenci oleh Allah maka Allah akan membencinya. Barang siapa memberi kemudaratan kepada seorang muslim maka Allah akan memberikan kemudaratan kepadanya. Barang siapa membuat makar, maka Allah akan membuat makar kepada dia. Barang siapa membuat susah dan menimbulkan kesulitan bagi saudaranya maka Allah akan membuat dia ikut susah.</string>
    <string name="text_three">Text 3</string>
    <string name="article_title_three">Nasihat Azab Dunia</string>
    <string name="article_subtitle_three"> Azab Akhirat </string>
    <string name="article_text_three">Azab adalah siksa Allah SWT yang ditimpakan kepada siapa saja yang Ia kehendaki (QS al Baqarah [2]: 284). Dari segi waktu atau tempatnya, siksa dibagi kepada tiga bagian. Siksa dunia, siksa kubur dan siksa akhirat.

Dari segi sifatnya, azab terdiri-dari berbagai macam jenis. Misalnya, azaban muhina (azab yang sangat menghinakan), azaban aliima (siksa yang sangat pedih) dan azaban syadida (siksa yang sangat keras), azabun muqim (siksa yang kekal) dan azabun ‘azhim (siksa yang sangat dahsyat).

Di dunia, azab yang diturunkan juga memiliki varian bentuknya. Azab berupa kehinaan, wabah penyakit, gempa yang kuat, angin topan, banjir, petir, kebakaran besar dan sebagainya. Di akhirat, azab yang disiapkan pastinya lebih besar (QS al-Qalam [68]:33).

        \n\n

Adapun perangai yang menyebabkan turunnya azab Allah di dunia adalah sebagai berikut. Pertama, kekufuran manusia. Kekufuran ini merupakan penyebab utama yang mengundang turunnya azab Allah di dunia( QS Ali Imran [3]:56).

Seperti kaum Tsamud, mereka dibinasakan dengan kejadian yang luar biasa. Kaum Ad, mereka dibinasakan dengan angin yang sangat dingin lagi amat kencang.  Allah SWT menimpakan angin itu kepada mereka selama tujuh malam dan delapan hari terus menerus. </string>
</resources>